--- a/RabbitMQ.Consumer/RabbitMQ.Consumer.csproj
+++ b/RabbitMQ.Consumer/RabbitMQ.Consumer.csproj
@@ -8,10 +8,12 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="MassTransit" Version="8.1.3" />
+      <PackageReference Include="MassTransit.RabbitMQ" Version="8.1.3" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="8.0.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
-      <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     </ItemGroup>
 
     <ItemGroup>
@@ -19,5 +21,7 @@
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
     </ItemGroup>
+
+    <Import Project="..\RabbitMQ.SharedProject\RabbitMQ.SharedProject.projitems" Label="Shared" />
 
 </Project>
